statum-macros/tests/ui/invalid_validators_parameter_name_collision.stderr
error: Error: validator `is_draft` for `impl Row` rebuilding `TaskMachine` state `TaskState::Draft` must declare only `&self`.
       Found parameters: `(& self, name : & str)`.
       Parameter name collision: `name` collides with injected machine field binding.
       Machine `TaskMachine` injects these fields by bare name inside validator bodies: `name`. Remove explicit parameters and use those bindings directly.
       Correct shapes: `fn is_draft(&self) -> Result<(), _>` or `fn is_draft(&self) -> Validation<()>`.
  --> tests/ui/invalid_validators_parameter_name_collision.rs:30:24
   |
30 |     fn is_draft(&self, name: &str) -> Result<(), statum_core::Error> {
   |                        ^^^^^^^^^^
